CAY-3027 Replace lifecycle StringIdQuery with StringIdFetcher